--- a/scripts/Packages/Package_NoLead__DFN_QFN_LGA_SON/size_definitions/qfn/qfn-64_9x9.yaml
+++ b/scripts/Packages/Package_NoLead__DFN_QFN_LGA_SON/size_definitions/qfn/qfn-64_9x9.yaml
@@ -1,3 +1,56 @@
+QFN-64-1EP_9x9mm_P0.5mm_EP4.35x4.35mm:
+  device_type: 'QFN'
+  #manufacturer: 'man'
+  #part_number: 'mpn'
+  size_source: 'https://www.ftdichip.com/Support/Documents/DataSheets/ICs/DS_FT2232H.pdf (page 57)'
+  ipc_class: 'qfn' # 'qfn_pull_back'
+  #ipc_density: 'least' #overwrite global value for this device.
+  # custom_name_format:
+  #body_size_x_min: 8.9
+  body_size_x: 9.0
+  #body_size_x_max: 9.1
+  #body_size_y_min: 8.9
+  body_size_y: 9.0
+  #body_size_y_max: 9.1
+  lead_width_min: 0.18
+  lead_width: 0.25
+  lead_width_max: 0.3
+  lead_len_min: 0.35
+  lead_len: 0.4
+  lead_len_max: 0.45
+
+  EP_size_x_min: 4.3
+  EP_size_x: 4.35
+  EP_size_x_max: 4.4
+  EP_size_y_min: 4.3
+  EP_size_y: 4.35
+  EP_size_y_max: 4.4
+  # EP_paste_coverage: 0.65
+  EP_num_paste_pads: [3, 3]
+  #heel_reduction: 0.1 #for relatively large EP pads (increase clearance)
+
+  thermal_vias:
+    count: [4, 4]
+    drill: 0.2
+    # min_annular_ring: 0.15
+    paste_via_clearance: 0.1
+    # EP_num_paste_pads: [2, 2]
+    #paste_between_vias: 1
+    #paste_rings_outside: 1
+    # EP_paste_coverage: 0.65
+    #grid: [1, 1]
+    # bottom_pad_size:
+    # paste_avoid_via: False
+
+  pitch: 0.5
+  num_pins_x: 16
+  num_pins_y: 16
+  #chamfer_edge_pins: 0.25
+  #pin_count_grid:
+  #pad_length_addition: 0.5
+  #suffix: '_Pad{pad_x:.2f}x{pad_y:.2f}mm_HandSolder'
+  #include_suffix_in_3dpath: 'False'
+
 QFN-64-1EP_9x9mm_P0.5mm_EP4.7x4.7mm:
   device_type: 'QFN'
   #manufacturer: 'man'
